--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.7.0",
     "i18next": "^23.11.4",
     "i18next-browser-languagedetector": "^8.0.0",
@@ -18,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.1",
     "react-router-dom": "^6.23.1",
+    "styled-components": "^6.1.11",
     "swiper": "^11.1.3",
     "swiper-react": "^1.0.0"
   },
